--- a/app/assets/stylesheets/components/_session_form.scss
+++ b/app/assets/stylesheets/components/_session_form.scss
@@ -21,7 +21,7 @@
   background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
 //   padding: 20px;
-  height: 410px;
+//   height: 410px;
   border: 1px solid #888;
   width: 600px; /* Could be more or less, depending on screen size */
   color: $light-gray;
@@ -89,6 +89,7 @@
     margin-left: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-bottom: 30px;
     margin-top: 20px;
     color: $white;
     border-radius: 5px;
